--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="settings">Delete completed</string>
     <string name="taskHint">What\'s next? ;)</string>
+    <string name="add_button_plus">+</string>
 </resources>
