--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="settings">Delete completed</string>
     <string name="taskHint">What\'s next? ;)</string>
+    <string name="descriptionHint">Task Description</string>
     <string name="add_button_plus">+</string>
+    <string name="add_description">Description</string>
 </resources>
