--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="bottom_menu_completed">Completed</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="settings">Delete completed</string>
+    <string name="settings_all">Delete all completed</string>
+    <string name="settings_selected">Delete selected</string>
     <string name="taskHint">What\'s next? ;)</string>
     <string name="descriptionHint">Task Description</string>
     <string name="add_button_plus">+</string>
