--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="descriptionHint">Task Description</string>
     <string name="add_button_plus">+</string>
     <string name="add_description">Description</string>
+    <string name="edit_description">Edit Description</string>
 </resources>
