back task back to task list, checked by default, hint if no tasks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="settings_all">Delete all completed</string>
     <string name="settings_selected">Delete selected</string>
+    <string name="settings_move_back">Move selected to task list</string>
     <string name="taskHint">What\'s next? ;)</string>
     <string name="descriptionHint">Task Description</string>
     <string name="add_button_plus">+</string>
     <string name="add_description">Description</string>
     <string name="edit_description">Edit Description</string>
+    <string name="empty_task_hint">Nothing here yet, let\'s get started!</string>
 </resources>
