hide soft keyboard upon entering completed fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">projectX</string>
+    <string name="app_name">TODO</string>
     <string name="bottom_menu_tasks">Tasks</string>
     <string name="bottom_menu_completed">Completed</string>
     <!-- TODO: Remove or change this placeholder text -->
