--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="descriptionHint">Task Description</string>
     <string name="add_button_plus">+</string>
     <string name="add_description">Description</string>
-    <string name="edit_description">Edit Description</string>
+    <string name="menu_edit_desc">Edit Description</string>
+    <string name="menu_header">Options</string>
+    <string name="menu_delete_task">Delete Task</string>
     <string name="empty_task_hint">Nothing here yet, let\'s get started!</string>
 </resources>
